fix(DatePicker): preserve range focus contrast

--- a/packages/dnb-eufemia/src/components/date-picker/style/dnb-date-picker.scss
+++ b/packages/dnb-eufemia/src/components/date-picker/style/dnb-date-picker.scss
@@ -395,7 +395,7 @@
     &--preview .dnb-button,
     &--inactive .dnb-button,
     &--within-selection:not(#{&}--start-date):not(#{&}--end-date)
-      .dnb-button:not(:hover) {
+      .dnb-button:not(:hover):not(:focus-visible) {
       background-color: transparent;
     }
 
